--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.58) unstable; urgency=low
+
+  * Fixed bug #17597 - DH_VERBOSE wasn'talways taking effect.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 28 Jan 1998 17:18:17 -0500
+
 debhelper (0.57) unstable; urgency=low
 
   * Depend on perl 5.004 or greater (for Getopt::Long).
