--- a/dh_builddeb.1
+++ b/dh_builddeb.1
@@ -3,7 +3,7 @@
 dh_builddeb \- build debian packages
 .SH SYNOPSIS
 .B dh_builddeb
-.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
+.I "[-v] [-a] [-i] [--no-act] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_builddeb simply calls
 .BR dpkg (8)
@@ -18,6 +18,10 @@ Build all architecture dependent packages.
 .TP
 .B \-i, \--indep
 Build all architecture independent packages.
+.TP
+.B \--no-act
+Do not really do anything. If used with -v, the result is that this command
+will output a list of what it would have done.
 .TP
 .B -ppackage, \--package=package
 Build the package named "package".
@@ -36,6 +40,9 @@ the control file will be built.
 .TP
 .I DH_VERBOSE
 Enables verbose mode
+.TP
+.I DH_NO_ACT
+Enables no-act mode (see above).
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .SH AUTHOR
