--- a/dh_gencontrol.1
+++ b/dh_gencontrol.1
@@ -3,7 +3,7 @@
 dh_gencontrol \- generate and install control file
 .SH SYNOPSIS
 .B dh_gencontrol
-.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [-uparams]"
+.I "[-v] [-a] [-i] [--no-act] [-ppackage] [-Ptmpdir] [-uparams]"
 .SH "DESCRIPTION"
 dh_gencontrol is a debhelper program that is responsible for generating and
 installing control files, and installing them into the DEBIAN directory with
@@ -24,6 +24,10 @@ Install files for all architecture dependent packages.
 .TP
 .B \-i, \--indep
 Install files for all architecture independent packages.
+.TP
+.B \--no-act
+Do not really do anything. If used with -v, the result is that this command
+will output a list of what it would have done.
 .TP
 .B \-ppackage, \--package=package
 Install files for the package named "package".
@@ -46,6 +50,9 @@ the control file will be effected.
 .TP
 .I DH_VERBOSE
 Enables verbose mode
+.TP
+.I DH_NO_ACT
+Enables no-act mode (see above).
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .BR dpkg-shlibdeps (1)
