--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -3,7 +3,7 @@
 dh_installmanpages \- install man pages into package build directories
 .SH SYNOPSIS
 .B dh_installmanpages
-.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [file ...]"
+.I "[-v] [-a] [-i] [--no-act] [-ppackage] [-Ptmpdir] [file ...]"
 .SH "DESCRIPTION"
 dh_installmanpages is a debhelper program that is responsible for
 automatically installing man pages into usr/man/ and usr/X11R6/man/ in
@@ -28,6 +28,10 @@ Install man pages into all architecture dependent packages.
 .TP
 .B \-i, \--indep
 Install man pages into all architecture independent packages.
+.TP
+.B \--no-act
+Do not really do anything. If used with -v, the result is that this command
+will output a list of what it would have done.
 .TP
 .B \-ppackage, \--package=package
 Install man pages into the package named "package".
@@ -55,6 +59,9 @@ pages belong in.
 .TP
 .I DH_VERBOSE
 Enables verbose mode
+.TP
+.I DH_NO_ACT
+Enables no-act mode (see above).
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .SH BUGS
