--- a/dh_clean.1
+++ b/dh_clean.1
@@ -3,7 +3,7 @@
 dh_clean \- clean up package build directories
 .SH SYNOPSIS
 .B dh_clean
-.I "[-v] [-a] [-i] [-k] [-ppackage] [-Ptmpdir] [file ...]"
+.I "[-v] [-a] [-i] [-k] [--no-act] [-ppackage] [-Ptmpdir] [file ...]"
 .SH "DESCRIPTION"
 dh_clean is a debhelper program that is responsible for cleaning up after a
 package is built. It removes the package build directories, and removes some
@@ -19,6 +19,10 @@ Clean up the package build directory for all architecture dependent packages.
 .TP
 .B \-i, \--indep
 Clean up the package build directory for all architecture independent packages.
+.TP
+.B \--no-act
+Do not really do anything. If used with -v, the result is that this command
+will output a list of what it would have done.
 .TP
 .B \-ppackage, \--package=package
 Clean up the package build directory for the package named "package".
@@ -49,6 +53,9 @@ the control file will have their package build directories cleaned up.
 .TP
 .I DH_VERBOSE
 Enables verbose mode
+.TP
+.I DH_NO_ACT
+Enables no-act mode (see above).
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .SH BUGS
