--- a/dh_du.1
+++ b/dh_du.1
@@ -3,7 +3,7 @@
 dh_du \- generate DEBIAN/du file
 .SH SYNOPSIS
 .B dh_du
-.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
+.I "[-v] [-a] [-i] [--no-act] [-ppackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 dh_du is a debhelper program that is responsible for generating
 a DEBIAN/du file, which lists the disk usage of directories in the package.
@@ -22,6 +22,10 @@ Generate du files for all architecture dependent packages.
 .B \-i, \--indep
 Generate du files for all architecture independent packages.
 .TP
+.B \--no-act
+Do not really do anything. If used with -v, the result is that this command
+will output a list of what it would have done.
+.TP
 .B \-ppackage, \--package=package
 Generate du file for the package named "package".
 .TP
@@ -39,6 +43,9 @@ the control file will be effected.
 .TP
 .I DH_VERBOSE
 Enables verbose mode
+.TP
+.I DH_NO_ACT
+Enables no-act mode (see above).
 .SH "SEE ALSO"
 .BR /usr/doc/debhelper/README
 .SH AUTHOR
