--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.59) unstable; urgency=low
+
+  * Added DH_NO_ACT and --no-act, which make debhelper commands run without
+    actually doing anything. (Combine with -v to see what the command would
+    have done.) (#17598)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  1 Feb 1998 14:51:08 -0800
+
 debhelper (0.58) unstable; urgency=low
 
   * Fixed bug #17597 - DH_VERBOSE wasn'talways taking effect.
