--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.60) unstable; urgency=low
+
+  * dh_fixperms: make all files readable and writable by owner
+    (policy 3.3.8 paragraph 2).
+    Lintian found lots of bugs that will be fixed by this change.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  9 Feb 1998 12:26:13 -0800
+
 debhelper (0.59) unstable; urgency=low
 
   * Added DH_NO_ACT and --no-act, which make debhelper commands run without
