--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.61) unstable; urgency=low
+
+  * dh_installmanpages: Add / to end of egrep -v regexp, fixes it so
+    debian/icewm.1 can be found.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 11 Feb 1998 09:09:28 -0800
+
 debhelper (0.60) unstable; urgency=low
 
   * dh_fixperms: make all files readable and writable by owner
