--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (0.62) unstable; urgency=low
+
+  * dh_installmanpages: if the man page filename ends in 'x', install it in
+    /usr/X11R6/man/.
+  * TODO: expanded descriptions of stuff, in the hope someone else will get
+    inspired to implement some of it.
+  *  Also added all wishlist bugs to the TODO.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 12 Feb 1998 22:38:53 -0800
+
 debhelper (0.61) unstable; urgency=low
 
   * dh_installmanpages: Add / to end of egrep -v regexp, fixes it so
