--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -10,7 +10,9 @@ documentation into usr/doc/package in package build directories.
 .P
 dh_installdocs automatically installs debian/copyright if it exists. If
 dh_installdocs is acting on multiple packages, debian/copyright files will be
-installed into all packages.
+installed into all packages. However, if you need to have seperate copyright
+files for different binary packages, you can use files named 
+debian/package.copyright.
 .P
 Any filenames specified as parameters will be installed into the first
 package dh_installdocs is told to act on. By default, this is the first 
