--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -11,7 +11,7 @@ if your package has a Makefile that installs everything into debian/tmp, and
 you need to break that up into subpackages.
 .P
 Files named debian/package.files list the files to be moved, separated by
-whitespace.
+whitespace. The filenames listed should be relative to debian/tmp/.
 .SH OPTIONS
 .TP
 .B \-v, \--verbose
