--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.64) unstable; urgency=low
+
+  * Removed some junk (a whole old debhelper source tree!) that had gotten
+    into the source package by accident.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 23 Feb 1998 20:23:34 -0800
+
 debhelper (0.63) unstable; urgency=low
 
   * Removed some debugging output from dh_installmanpages.
