--- a/dh_testversion.1
+++ b/dh_testversion.1
@@ -25,7 +25,7 @@ dpkg --help.
 .TP
 .B version
 Version number to compare against the current version of debhelper. If not
-specified, dh_testroot does nothing.
+specified, dh_testversion does nothing.
 .SH EXAMPLES
 .TP
 .I dh_testversion 0.50
