--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.65) unstable; urgency=low
+
+  * dh_installdocs.1, dh_movefiles.1: cleaified documentation for Che.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  2 Mar 1998 17:20:39 -0800
+
 debhelper (0.64) unstable; urgency=low
 
   * Removed some junk (a whole old debhelper source tree!) that had gotten
