--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
+debhelper (0.66) unstable; urgency=low
+
+  * README, dh_testversion.1, dh_movefiles.1: more doc fixes.
+  * dh_movefiles: don't check for package names to see if files are being
+    moved from one package back into itself, instead, check tmp dir names.
+    If you use this behavior, you should use "dh_testversion 0.66".
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  2 Mar 1998 17:50:29 -0800
+
 debhelper (0.65) unstable; urgency=low
 
-  * dh_installdocs.1, dh_movefiles.1: cleaified documentation for Che.
+  * dh_installdocs.1, dh_movefiles.1: clarified documentation for Che.
 
  -- Joey Hess <joeyh@master.debian.org>  Mon,  2 Mar 1998 17:20:39 -0800
 
