--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.67) unstable; urgency=low
+
+  * Added PROGRAMMING document that describes the interface of dh_lib, to
+    aid others in writing and understanding debhelper programs.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  6 Mar 1998 12:45:08 -0800
+
 debhelper (0.66) unstable; urgency=low
 
   * README, dh_testversion.1, dh_movefiles.1: more doc fixes.
