--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -23,7 +23,8 @@ Also,  debian/README.Debian (or debian/README.debian) and debian/TODO, if
 they exist, will be installed into the first binary package listed in 
 debian/control, if dh_installdocs is acting on that package. Note that 
 debian/TODO will be installed named TODO.Debian, if the package is not a 
-debian native package.
+debian native package. Also note that README.debian is installed as
+README.Debian, for consitency.
 .P
 A file named debian/package.docs (debian/docs may be used for the first
 binary package in debian/control) can list other files to be installed.
