--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.68) unstable; urgency=low
+
+  * Document that README.debian files are installed as README.Debian (#19089).
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  6 Mar 1998 17:48:32 -0800
+
 debhelper (0.67) unstable; urgency=low
 
   * Added PROGRAMMING document that describes the interface of dh_lib, to
