--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.69) unstable; urgency=low
+
+  * Refer to suidregister (8), not (1). Bug #19149.
+  * Removed junk file from debian/ dir.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  8 Mar 1998 13:04:36 -0800
+
 debhelper (0.68) unstable; urgency=low
 
   * Document that README.debian files are installed as README.Debian (#19089).
