--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.70) unstable; urgency=low
+
+  * dh_lib: autoscript(): no longer add the modification date to the
+    comments aurrounding debhelper-added code. I don't think this date was
+    gaining us anything, so let's remove it and save some disk space.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  8 Mar 1998 21:15:13 -0800
+
 debhelper (0.69) unstable; urgency=low
 
   * Refer to suidregister (8), not (1). Bug #19149.
