--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (0.71) unstable; urgency=low
+
+  * dh_makeshlibs: -V flag was broken: if just -V was specified,
+    dh_makeshlibs would die. Corrected this.
+  * dh_lib: removed warning if the arguments passed to a debhelper command
+    do not apply to the main package. It's been long enough so I'm 100% sure
+    no packages use the old behavior.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  9 Mar 1998 11:46:59 -0800
+
 debhelper (0.70) unstable; urgency=low
 
   * dh_lib: autoscript(): no longer add the modification date to the
