--- a/dh_suidregister.1
+++ b/dh_suidregister.1
@@ -12,7 +12,7 @@ with
 when it is installed.
 .P
 Any filenames specified as parameters will be registered in the first 
-package dh_installdocs is told to act on. By default, this is the first 
+package dh_suidregister is told to act on. By default, this is the first 
 binary package in debian/control, but if you use -p, -i, or -a flags, 
 it will be the first package specified by those flags.
 .P
