--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.72) unstable; urgency=low
+
+  * Applied patch from Yann Dirson <ydirson@a2points.com> to add a
+    --init-script parameter to dh_installinit. (#19227)
+  * Documented this new switch.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  9 Mar 1998 17:12:04 -0800
+
 debhelper (0.71) unstable; urgency=low
 
   * dh_makeshlibs: -V flag was broken: if just -V was specified,
