--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (0.74) unstable; urgency=low
+
+  * dh_installmanpages: convert .so links to symlinks at last (#19829).
+  * dh_installmanpages.1: documented that no, dh_installmanpages never
+    installs symlink man pages from the source package (#19831).
+  * dh_installmanpages: minor speedups
+  * PROGRAMMING: numerous spelling fixes, thanks to Christian T. Steigies.
+    Life is too short for me to spell check my technical documentation, but
+    I always welcome corrections!
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 17 Mar 1998 22:09:07 -0800
+
 debhelper (0.73) unstable; urgency=low
 
   * Fixed typo in dh_suidregister.1
