--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.73) unstable; urgency=low
+
+  * Fixed typo in dh_suidregister.1
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 12 Mar 1998 16:30:27 -0800
+
 debhelper (0.72) unstable; urgency=low
 
   * Applied patch from Yann Dirson <ydirson@a2points.com> to add a
