--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.75) unstable; urgency=low
+
+  * Actually exit if there is an unknown option onthe command line (oooops!)
+  * Fix .so file conversion to actually work (#19933).
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 19 Mar 1998 11:54:58 -0800
+
 debhelper (0.74) unstable; urgency=low
 
   * dh_installmanpages: convert .so links to symlinks at last (#19829).
