--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,14 @@
+debhelper (0.76) frozen unstable; urgency=low
+
+  * I intended version 0.75 to make it in before the freeze, and it did not.
+    This is just to get it into frozen. There are no changes except bug
+    fixes.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 26 Mar 1998 12:25:47 -0800
+
 debhelper (0.75) unstable; urgency=low
 
-  * Actually exit if there is an unknown option onthe command line (oooops!)
+  * Actually exit if there is an unknown option on the command line (oooops!)
   * Fix .so file conversion to actually work (#19933).
 
  -- Joey Hess <joeyh@master.debian.org>  Thu, 19 Mar 1998 11:54:58 -0800
