--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.77) frozen unstable; urgency=low
+
+  * Fixed a nasty bug in dh_makeshlibs when it was called with -V, but with
+    no version string after the -V.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 29 Mar 1998 16:08:27 -0800
+
 debhelper (0.76) frozen unstable; urgency=low
 
   * I intended version 0.75 to make it in before the freeze, and it did not.
