--- a/README
+++ b/README
@@ -7,6 +7,13 @@ that use debhelper commands extensively. See /usr/doc/debhelper/examples/ .
 These files are also useful as they give one good order you can run the 
 various debhelper scripts in (though other variations are possible).
 
+Starting a new package:
+----------------------
+
+You can just use the example rules files and do the rest of the new package
+set up by hand, or you could try the new dh-make package, which contains a
+"dh_make" command that is similar to debmake, and tries to automate the
+process.
 
 Converting from debstd to debhelper:
 -----------------------------------
@@ -59,7 +66,7 @@ commands. So if you have postinst, postrm, etc scripts, add a line reading
 
 Once you think it's all set up properly, do a test build of your package. If 
 it works ok, I recommend that you compare the new package and the old 
-debstd-generated package very closely. Pay special attention to the postint, 
+debstd-generated package very closely. Pay special attention to the postinst, 
 postrm, etc scripts.
 
 
