--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (0.78) frozen unstable; urgency=low
+
+  * More spelling fixes from Christian T. Steigies. (I ignored the spelling
+    fixes to the changelog, though - too many, and a changelog isn't meant
+    to be changed after the fact :-)
+  * dh_fixperms: remove execute bits from .la files genrated by libtool.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 30 Mar 1998 12:44:42 -0800
+
 debhelper (0.77) frozen unstable; urgency=low
 
   * Fixed a nasty bug in dh_makeshlibs when it was called with -V, but with
