--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.79) frozen; urgency=low
+
+  * Reupload to get it into frozen. No changes since version 0.75 
+    except bugfixes.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  2 Apr 1998 16:10:55 -0800
+
 debhelper (0.78) frozen unstable; urgency=low
 
   * More spelling fixes from Christian T. Steigies. (I ignored the spelling
