--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -12,7 +12,12 @@ you need to break that up into subpackages.
 .P
 Files named debian/package.files list the files to be moved, separated by
 whitespace. The filenames listed should be relative to debian/tmp/. You can
-also list directory names, and the whole directory will be moved.
+also list directory names, and the whole directory will be moved. You can
+even use wildcards if you like.
+.P
+The files will be moved in a special order: first all normal files, then all
+symlinks. This is done becuase it tends to be a good thing to have symlinks
+last in debian packages, particularly in shared library packages.
 .SH OPTIONS
 .TP
 .B \-v, \--verbose
