--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.81) unstable; urgency=low
+
+  * dh_movefiles: empty $tomove (#20495).
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 31 Mar 1998 15:36:32 -0800
+
 debhelper (0.80) unstable; urgency=low
 
   * Moved under cvs (so I can fork a stable and an unstable version).
