--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.83) unstable; urgency=low
+
+  * Generate symlinks in build stage of debian/rules. cvs cannot create them
+    properly. Note that version 0.80 and 0.81 could not build some packages
+    because of missing symlinks.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 31 Mar 1998 19:27:29 -0800
+
 debhelper (0.81) unstable; urgency=low
 
   * dh_movefiles: empty $tomove (#20495).
