--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.84) unstable; urgency=low
+
+  * Applied Che_Fox'x patches to example rules files, which makes them use
+    an install target internally to move things into place in debian/tmp.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  9 Apr 1998 12:08:45 -0700
+
 debhelper (0.83) unstable; urgency=low
 
   * Generate symlinks in build stage of debian/rules. cvs cannot create them
